Removes case cycles from the data model
