# swagger/v1/swagger.json
@@ -361,367 +361,6 @@
         }
       }
     },
-    "/api/v1/case_cycles": {
-      "get": {
-        "summary": "lists all case_cycles for a user",
-        "tags": [
-          "case_cycles"
-        ],
-        "responses": {
-          "200": {
-            "description": "case_cycles found",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        }
-      },
-      "post": {
-        "summary": "creates a case_cycle",
-        "tags": [
-          "case_cycles"
-        ],
-        "parameters": [
-
-        ],
-        "responses": {
-          "201": {
-            "description": "case_cycle created",
-            "content": {
-            }
-          },
-          "422": {
-            "description": "invalid request",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/createCaseCycle"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/case_cycles/{id}": {
-      "parameters": [
-        {
-          "name": "id",
-          "in": "path",
-          "required": true,
-          "schema": {
-            "type": "string"
-          }
-        }
-      ],
-      "get": {
-        "summary": "retrieves a case_cycle",
-        "tags": [
-          "case_cycles"
-        ],
-        "responses": {
-          "200": {
-            "description": "case_cycle found",
-            "content": {
-            }
-          },
-          "404": {
-            "description": "case_cycle not found",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        }
-      },
-      "put": {
-        "summary": "updates a case_cycle",
-        "tags": [
-          "case_cycles"
-        ],
-        "parameters": [
-
-        ],
-        "responses": {
-          "200": {
-            "description": "case_cycle updated",
-            "content": {
-            }
-          },
-          "422": {
-            "description": "case_cycle cannot be updated",
-            "content": {
-            }
-          },
-          "404": {
-            "description": "case_cycle not found",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/updateCaseCycle"
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "summary": "deletes a case_cycle",
-        "tags": [
-          "case_cycles"
-        ],
-        "responses": {
-          "204": {
-            "description": "case_cycle deleted",
-            "content": {
-            }
-          },
-          "404": {
-            "description": "case_cycle not found",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/child_case_cycles": {
-      "get": {
-        "summary": "lists all child_case_cycles for a user",
-        "tags": [
-          "child_case_cycles"
-        ],
-        "responses": {
-          "200": {
-            "description": "child_case_cycles found",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        }
-      },
-      "post": {
-        "summary": "creates a child_case_cycle",
-        "tags": [
-          "child_case_cycles"
-        ],
-        "parameters": [
-
-        ],
-        "responses": {
-          "201": {
-            "description": "child_case_cycle created",
-            "content": {
-            }
-          },
-          "422": {
-            "description": "invalid request",
-            "content": {
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/createChildCaseCycle"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/child_case_cycles/{id}": {
-      "parameters": [
-        {
-          "name": "id",
-          "in": "path",
-          "required": true,
-          "schema": {
-            "type": "string"
-          }
-        }
-      ],
-      "get": {
-        "summary": "retrieves a child_case_cycle",
-        "tags": [
-          "child_case_cycles"
-        ],
-        "responses": {
-          "200": {
-            "description": "child_case_cycle found",
-            "content": {
-            }
-          },
-          "404": {
-            "description": "child_case_cycle not found",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        }
-      },
-      "put": {
-        "summary": "updates a child_case_cycle",
-        "tags": [
-          "child_case_cycles"
-        ],
-        "parameters": [
-
-        ],
-        "responses": {
-          "200": {
-            "description": "child_case_cycle updated",
-            "content": {
-            }
-          },
-          "422": {
-            "description": "child_case_cycle cannot be updated",
-            "content": {
-            }
-          },
-          "404": {
-            "description": "child_case_cycle not found",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/updateChildCaseCycle"
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "summary": "deletes a child_case_cycle",
-        "tags": [
-          "child_case_cycles"
-        ],
-        "responses": {
-          "204": {
-            "description": "child_case_cycle deleted",
-            "content": {
-            }
-          },
-          "404": {
-            "description": "child_case_cycle not found",
-            "content": {
-            }
-          },
-          "401": {
-            "description": "not authorized",
-            "content": {
-            }
-          },
-          "500": {
-            "description": "internal server error",
-            "content": {
-            }
-          }
-        }
-      }
-    },
     "/api/v1/children": {
       "get": {
         "summary": "lists all children for a user",
@@ -1147,69 +786,6 @@
           }
         }
       },
-      "case_cycle": {
-        "type": "object",
-        "properties": {
-          "case_number": {
-            "anyOf": [
-              {
-                "type": "string",
-                "example": "123-45"
-              },
-              {
-                "type": "null"
-              }
-            ]
-          },
-          "copay_cents": {
-            "type": "integer",
-            "minimum": 0
-          },
-          "copay_currency": {
-            "type": "string",
-            "example": "USD"
-          },
-          "copay_frequency": {
-            "anyOf": [
-              {
-                "$ref": "#/components/schemas/copay_frequencies"
-              },
-              {
-                "type": "null"
-              }
-            ]
-          },
-          "effective_on": {
-            "$ref": "#/components/schemas/date_or_null"
-          },
-          "expires_on": {
-            "$ref": "#/components/schemas/date_or_null"
-          },
-          "notified_on": {
-            "$ref": "#/components/schemas/date_or_null"
-          },
-          "status": {
-            "$ref": "#/components/schemas/case_statuses"
-          },
-          "submitted_on": {
-            "type": "string",
-            "example": "2020-07-12"
-          },
-          "user_id": {
-            "type": "uuid",
-            "example": "3fa57706-f5bb-4d40-9350-85871f698d52"
-          }
-        }
-      },
-      "attendance": {
-        "type": "object",
-        "properties": {
-          "child_case_cycle_id": {
-            "type": "uuid",
-            "example": "3fa57706-f5bb-4d40-9350-85871f698d52"
-          }
-        }
-      },
       "attendance": {
         "type": "object",
         "properties": {
@@ -1219,10 +795,6 @@
           },
           "check_out": {
             "$ref": "#/components/schemas/time_or_null"
-          },
-          "child_case_cycle_id": {
-            "type": "uuid",
-            "example": "3fa57706-f5bb-4d40-9350-85871f698d52"
           },
           "attendance_duration": {
             "$ref": "#/components/schemas/duration_definitions"
@@ -1341,72 +913,6 @@
             "allOf": [
               {
                 "$ref": "#/components/schemas/child"
-              }
-            ]
-          }
-        }
-      },
-      "createCaseCycle": {
-        "type": "object",
-        "properties": {
-          "case_cycle": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/case_cycle"
-              },
-              {
-                "type": "object",
-                "required": [
-                  "status",
-                  "submitted_on"
-                ]
-              }
-            ]
-          }
-        }
-      },
-      "updateCaseCycle": {
-        "type": "object",
-        "properties": {
-          "case_cycle": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/case_cycle"
-              }
-            ]
-          }
-        }
-      },
-      "createChildCaseCycle": {
-        "type": "object",
-        "properties": {
-          "child_case_cycle": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/child_case_cycle"
-              },
-              {
-                "type": "object",
-                "required": [
-                  "case_cycle_id",
-                  "child_id",
-                  "full_days_allowed",
-                  "part_days_allowed",
-                  "subsidy_rule_id",
-                  "user_id"
-                ]
-              }
-            ]
-          }
-        }
-      },
-      "updateChildCaseCycle": {
-        "type": "object",
-        "properties": {
-          "child_case_cycle": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/child_case_cycle"
               }
             ]
           }
